--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -30,7 +30,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
   position: relative;
-  width: 100%;
+  width: 80%;
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
@@ -48,8 +48,7 @@
     padding: 0; }
 }
 
-/* For devices larger than 550px */
-@media (min-width: 550px) {
+@media (min-width: 1000px) {
   .container {
     width: 80%; }
   .column,
@@ -63,11 +62,11 @@
   .one.columns                    { width: 4.66666666667%; }
   .two.columns                    { width: 13.3333333333%; }
   .three.columns                  { width: 22%;            }
-  .four.columns                   { width: 30.6666666667%; background-color: rgb(213, 238, 243); padding: 5px; border-radius: 5px;}
+  .four.columns                   { width: 30.6666666667%; background-color: rgb(213, 238, 243); padding: 5px; border-radius: 5px; float: left; }
   .five.columns                   { width: 39.3333333333%; }
   .six.columns                    { width: 48%;            }
   .seven.columns                  { width: 56.6666666667%; }
-  .eight.columns                  { width: 65.3333333333%; }
+  .eight.columns                  { width: 65.3333333333%; float:right; }
   .nine.columns                   { width: 74.0%;          }
   .ten.columns                    { width: 82.6666666667%; }
   .eleven.columns                 { width: 91.3333333333%; }
@@ -112,6 +111,10 @@
 
 }
 
+img {
+  max-width: 100%;
+  border-radius: 5px;
+}
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -134,10 +137,11 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300; }
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem; font-weight: 400; }
+h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem; font-weight: 400; background-color:rgb(8, 97, 117); color: #fff;
+    padding: 5px 5px; border-radius: 5px; margin-top: 5px;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
+h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; background-color: rgb(179, 221, 230); padding-left: 5px; border-radius: 3px;}
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
